debug scrollbar issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,13 +30,16 @@ html {
   overflow-x: hidden;
 }
 
-/* Hide scrollbars for webkit browsers */
-::-webkit-scrollbar {
-  width: 0px;
-  background: transparent;
-}
-
 * {
   box-sizing: border-box;
-  scrollbar-width: none; /* Hide scrollbars for Firefox */
+}
+
+/* Hide scrollbars only on specific containers that shouldn't have them */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
 }
